feat: web finalizada. A la espera de la calificación

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button class="nav-boton-contacto">Contact</button>
             </div>
             <div class="navegacion-movil">
-                <img src="img/icon-hamburger.svg">
+                <img src="img/icon-hamburger2.svg">
             </div>
         </navbar>
     </header>
@@ -79,66 +79,73 @@
         </div>
     </article>
 
-    <section class="contenedor-pasos">
-        <div class="tarjeta-pasos">
-            <div class="contenedor-boton-pasos">
-                <button class="btn-pasos">01</button>
-            </div>
-            <div class="contenedor-informacion-pasos">
-                <div>
-                    <div id="pasos-titulo">
-                        <button class="btn-pasos-movil">01</button>
-                        <p class="pasos-titulo">Track company-wide progress</p>
-                    </div>
+    <div class="pregunta-pasos">
+        <section class="contenedor-pasos">
+            <div class="tarjeta-pasos">
+                <div class="contenedor-boton-pasos">
+                    <button class="btn-pasos">01</button>
+                </div>
+                <div class="contenedor-informacion-pasos">
                     <div>
-                        <p class="pasos-descripcion">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue.
-                            Nam tellus sem, tempus
-                            pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                            consequat dolor.</p>
+                        <div id="pasos-titulo">
+                            <button class="btn-pasos-movil">01</button>
+                            <p class="pasos-titulo">Track company-wide progress</p>
+                        </div>
+                        <div>
+                            <p class="pasos-descripcion">Donec elit est, mattis lacinia arcu eu, efficitur consequat
+                                augue.
+                                Nam tellus sem, tempus
+                                pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam
+                                eget,
+                                consequat dolor.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="tarjeta-pasos">
-            <div class="contenedor-boton-pasos">
-                <button class="btn-pasos">02</button>
-            </div>
-            <div class="contenedor-informacion-pasos">
-                <div>
-                    <div id="pasos-titulo">
-                        <button class="btn-pasos-movil">01</button>
-                        <p class="pasos-titulo">Advance built-in reports</p>
-                    </div>
+            <div class="tarjeta-pasos">
+                <div class="contenedor-boton-pasos">
+                    <button class="btn-pasos">02</button>
+                </div>
+                <div class="contenedor-informacion-pasos">
                     <div>
-                        <p class="pasos-descripcion">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue.
-                            Nam tellus sem, tempus
-                            pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                            consequat dolor.</p>
+                        <div id="pasos-titulo">
+                            <button class="btn-pasos-movil">02</button>
+                            <p class="pasos-titulo">Advance built-in reports</p>
+                        </div>
+                        <div>
+                            <p class="pasos-descripcion">Donec elit est, mattis lacinia arcu eu, efficitur consequat
+                                augue.
+                                Nam tellus sem, tempus
+                                pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam
+                                eget,
+                                consequat dolor.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="tarjeta-pasos">
-            <div class="contenedor-boton-pasos">
-                <button class="btn-pasos">03</button>
-            </div>
-            <div class="contenedor-informacion-pasos">
-                <div>
-                    <div id="pasos-titulo">
-                        <button class="btn-pasos-movil">01</button>
-                        <p class="pasos-titulo">Everything you need in one place</p>
-                    </div>
+            <div class="tarjeta-pasos">
+                <div class="contenedor-boton-pasos">
+                    <button class="btn-pasos">03</button>
+                </div>
+                <div class="contenedor-informacion-pasos">
                     <div>
-                        <p class="pasos-descripcion">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue.
-                            Nam tellus sem, tempus
-                            pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                            consequat dolor.</p>
+                        <div id="pasos-titulo">
+                            <button class="btn-pasos-movil">03</button>
+                            <p class="pasos-titulo">Everything you need in one place</p>
+                        </div>
+                        <div>
+                            <p class="pasos-descripcion">Donec elit est, mattis lacinia arcu eu, efficitur consequat
+                                augue.
+                                Nam tellus sem, tempus
+                                pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam
+                                eget,
+                                consequat dolor.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
+        </section>
+    </div>
     <!------------------------------ sección mejores del mes ------------------------------>
     <section class="contenedor-mejores-del-mes">
         <div class="titulo-mejores-del-mes">
@@ -146,13 +153,13 @@
         </div>
         <div class="contenido-mejores-del-mes">
             <div class="tarjeta-mejores-del-mes" id="sanyo">
-                <div>
+                <div class="tarjeta-img">
                     <img src="img/avatar-sanyo.png">
                 </div>
-                <div>
+                <div class="tarjeta-titulo">
                     <h1>Sanyo</h1>
                 </div>
-                <div>
+                <div class="tarjeta-body">
                     <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum
                         eu
                         neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -160,13 +167,13 @@
                 </div>
             </div>
             <div class="tarjeta-mejores-del-mes" id="lebron">
-                <div>
+                <div class="tarjeta-img">
                     <img src="img/avatar.lebron.png">
                 </div>
-                <div>
-                    <h1>Sanyo</h1>
+                <div class="tarjeta-titulo">
+                    <h1>Lebron</h1>
                 </div>
-                <div>
+                <div class="tarjeta-body">
                     <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum
                         eu
                         neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -174,13 +181,13 @@
                 </div>
             </div>
             <div class="tarjeta-mejores-del-mes" id="navarro">
-                <div>
+                <div class="tarjeta-img">
                     <img src="img/avatar-navarro.png">
                 </div>
-                <div>
-                    <h1>Sanyo</h1>
+                <div class="tarjeta-titulo">
+                    <h1>Navarro</h1>
                 </div>
-                <div>
+                <div class="tarjeta-body">
                     <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum
                         eu
                         neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -193,7 +200,7 @@
         </div>
     </section>
 
-    <!------------------------------ sección mejores del mes ------------------------------>
+    <!------------------------------ sección conoce equipo------------------------------>
     <article class="conoce-equipo">
         <div class="caja">
             <h1>Get to know the best
@@ -246,6 +253,46 @@
                 </div>
             </div>
         </div>
+    </footer>
+
+    <footer class="footer-movil">
+        <div class="formulario-movil">
+            <input type="email" placeholder="Update in your inbox...">
+            <button class="animated-button" type="button">Go</button>
+        </div>
+        <div class="footer-menu">
+            <div class="caja-movil">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
+            <div class="caja-movil">
+                <ul>
+                    <li><a href="#">Trainning</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Privace Policy</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="contenido-redes-movil">
+            <div class="footer-redes-sociales-movil">
+                <img src="img/icon-facebook.svg" class="redes-movil">
+                <img src="img/icon-youtube.svg" class="redes-movil">
+                <img src="img/icon-twitter.svg" class="redes-movil">
+                <img src="img/icon-pinterest.svg" class="redes-movil">
+                <img src="img/icon-instagram.svg" class="redes-movil">
+            </div>
+        </div>
+        <div class="caja-logo-footer-movil">
+            <img class="logo-footer-movil" src="img/logo-white.png">
+        </div>
+        <div class="copyright-movil">
+            <span>Copyright 2020. All Rights Reserved</span>
+        </div>
+
     </footer>
 
 </body>
